Closed Bug 382504 Opened 17 years ago Closed 17 years ago

can't (un)expand threads

Categories

(Thunderbird :: Mail Window Front End, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: tuukka.tolvanen, Assigned: mscott)

References

Details

(Keywords: regression)

Attachments

(1 file, 3 obsolete files)

tbird trunk today, linux

 1. click twisty to expand a thread
     -> twisty state changes, no message rows appear
    expected: show messages in thread
 2. unexpand a thread, not last row
     -> twisty state changes, bunch of unrelated msg rows below deleted
    expected: hide messages in thread except topmost

bug 362680 (tree) or bug 379070 (nsIMsgThread)?
I was telling Tuukka in IRC, I can't reproduce this on a Windows build built from earlier this morning.

He also got this JS error:

Error: uncaught exception: [Exception... "Component returned failure code: 0xbfbced1c [nsITreeView.toggleOpenState]"  nsresult: "0xbfbced1c (<unknown>)"  location: "JS frame :: chrome://global/content/bindings/tree.xml :: changeOpenState :: line 220"  data: no]
oh, yeah, that exception on expand, none on unexpand
still broken with bug 362680 reverted, and 2007-05-29 15:00 PDT works, so bug 379070 sounds likely
Blocks: 379070
No longer depends on: 362680, 379070
cc'ing Joerg. He might be able to reproduce and help figure out what we regressed.
Attached patch does this help at all? (obsolete) — Splinter Review
Does this patch help the problem at all?
no.
Hm...can't reproduce this on Windows too. I will check this on my linux build this afternoon.
I tried this with an older test profile and it worked there. It started failing there as well after deleting an msf. Try that :)
Seeing it too (on linux). It also seems to hide messages when trying to contract the thread.
Keywords: regression
Comment on attachment 266671 [details] [diff] [review]
does this help at all?

I landed this patch along with some other fixes to nsMsgThread as part of another bug. Obsoleting.

Tuukka, can you update nsMsgThread.cpp one more time and see if you still reproduce this?

I just deleted inbox.msf and still don't see this but I'm running with the patch I checked in this morning to nsMsgGroupThread.cpp
Attachment #266671 - Attachment is obsolete: true
nsMsgGroupThread.cpp --> nsMsgThread.cpp
I'm still seeing it with a Mac build from half an hour ago - new profile, create a news.mozilla.org account, subscribe to m.d.a.thunderbird, download 500 headers, click the first triangle and it turns without opening, click it again and it hides the thread below it.
perhaps related, turning threading on or off results in
    WARNING: NS_ENSURE_TRUE(NS_SUCCEEDED(rv)) failed: file
    mozilla/mailnews/base/util/nsMsgDBFolder.cpp, line 4142
roughly one for each thread >1 msg
I can reproduce it now. In nsMsgThreadEnumerator::GetNext the variable rv must be initialized to NS_OK. Then everything will work fine...again.
Attached patch bugfix (obsolete) — Splinter Review
this will fix the issue
Attached patch bugfix (obsolete) — Splinter Review
what the ... is wrong with my diffs?? second try
Attachment #266875 - Attachment is obsolete: true
Attached patch bugfix version 2Splinter Review
maybe this is nicer code
Attachment #266876 - Attachment is obsolete: true
Attachment #266878 - Flags: review?(mscott)
Comment on attachment 266878 [details] [diff] [review]
bugfix version 2

that makes sense. I'll check this in right now. Good find!
Attachment #266878 - Flags: review?(mscott) → review+
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: