Bug #382504 --> Fix a mailnews blocker. Unable to expand or collapse message threads, make sure we don't return an uninitialized rv value.

(Not part of the firefox alpha 5 build)

Patch by Joerg Bornemann <jobor@gmx.de>
sr=mscott